tree-sitter-prove/grammar.js
    source_file: $ => choice(
      $.intent_file,
      repeat($._top_level),
    ),

    _top_level: $ => choice(
      $.module_declaration,
      $.function_definition,
      $.main_definition,
    ),

    // ─── .intent file ─────────────────────────────────────────────

    module_declaration: $ => prec.right(seq(
      'module',
      $.type_identifier,
      repeat(choice(
        $.type_definition,
        $.binary_type_definition,
        prec(-1, $.import_declaration),
        prec(-2, $.import_group),
        $.constant_definition,
        $.invariant_network,
        $.narrative_annotation,
        $.domain_annotation,
        $.temporal_annotation,
        $.foreign_block,
        $.function_definition,
        $.main_definition,
      )),
    )),

    // ─── Imports ───────────────────────────────────────────────

    import_declaration: $ => prec.right(seq(
      optional($.local_module_marker),
      $.type_identifier,
      repeat1($.import_group),
      optional(prec.dynamic(10, $._newline)),
    )),

    import_group: $ => choice(
      prec.right(seq(alias('types', $.import_verb), repeat1($.type_identifier), optional(prec.dynamic(10, $._newline)))),
      prec.right(seq(alias('constants', $.import_verb), repeat1($.constant_identifier), optional(prec.dynamic(10, $._newline)))),
      prec.right(seq($.import_verb, repeat1(choice($.identifier, $.type_identifier)), optional(prec.dynamic(10, $._newline)))),
      prec.right(-1, seq($.identifier, repeat(choice($.identifier, $.type_identifier)), optional(prec.dynamic(10, $._newline)))),
      // Bare type identifiers without verb
      prec.right(-2, seq(repeat1($.type_identifier), optional(prec.dynamic(10, $._newline)))),
      // Bare constant identifiers without 'constants' keyword
      prec.right(-3, seq($.constant_identifier, repeat($.constant_identifier), optional(prec.dynamic(10, $._newline)))),
    ),

    type_definition: $ => seq(
      optional($.doc_comment_block),
      'type',
      $.type_identifier,
      optional(seq(':', $.type_modifier_bracket)),
      optional($.type_parameters),
      'is',
      $._type_body,
    ),

    type_modifier_bracket: $ => seq(
      '[',
      repeat1($.type_identifier),
      ']',
    ),

    _type_body: $ => choice(
      $.algebraic_type_body,
      $.record_type_body,
      $.refinement_type_body,
      $.binary_type_body,
      $.lookup_type_body,
      $.named_lookup_type_body,
      $.runtime_lookup_type_body,
      $.dispatch_lookup_type_body,
    ),

    binary_type_body: $ => 'binary',

    algebraic_type_body: $ => prec.right(seq(
      $.algebraic_variant,
      repeat(seq(optional('|'), $.algebraic_variant)),
    )),

    algebraic_variant: $ => seq(
      $.type_identifier,
      optional($.variant_fields),
    ),

    variant_fields: $ => seq(
      '(',
      sep1($.field_declaration, ','),
      ')',
    ),

    field_declaration: $ => prec(10, seq(
      $.identifier,
      $.type_expression,
    )),

    refinement_type_body: $ => seq(
      $.type_expression,
      'where',
      choice($.shorthand_constraint, $.expression),
    ),

    lookup_type_body: $ => prec.dynamic(2, prec.right(seq(
      $.type_expression,
      repeat(seq(optional('|'), $.type_expression)),
      'where',
      repeat1($.lookup_variant),
    ))),

    named_lookup_type_body: $ => prec.right(seq(
      $._lookup_column,
      repeat(seq('|', $._lookup_column)),
      'where',
      repeat1($.lookup_variant),
    )),

    lookup_variant: $ => prec.left(seq(
      $.type_identifier,
      '|',
      $._lookup_value,
      repeat(seq('|', $._lookup_value)),
    )),

    dispatch_lookup_type_body: $ => prec.right(2, seq(
      $._lookup_column,
      repeat1(seq('|', $._lookup_column)),
      repeat1($.dispatch_lookup_variant),
    )),

    dispatch_lookup_variant: $ => seq(
      $.string_literal,
      '|',
      $.identifier,
    ),

    _lookup_column: $ => choice(
      $.named_lookup_column,
      $.type_expression,
    ),

    named_lookup_column: $ => seq(
      $.identifier,
      ':',
      $.type_expression,
    ),

    _lookup_value: $ => choice(
      $.string_literal,
      $.integer_literal,
      $.decimal_literal,
      $.boolean_literal,
    ),

    // ─── Type Expressions ──────────────────────────────────────

    type_expression: $ => choice(
      $.modified_type,
      $.generic_type,
      $.simple_type,
    ),

    simple_type: $ => $.type_identifier,

    generic_type: $ => prec(1, seq(
      $.type_identifier,
      '<',
      sep1($.type_expression, ','),
      '>',
    )),

    verb: $ => choice(
      'creates',
      'inputs',
      'matches',
      'outputs',
      'reads',
      'transforms',
      'validates',
    ),

    function_definition: $ => prec.right(seq(
      optional($.doc_comment_block),
      choice($.verb, $.async_verb),
      $.identifier,
      $.parameter_list,
      optional($.type_expression),
      optional($.fail_marker),
      repeat($._annotation),
      choice(
        seq('from', $._body_content),
        'binary',
      ),
    )),

    main_definition: $ => prec.right(seq(
      optional($.doc_comment_block),
      'main',
      '(',
      ')',
      optional($.type_expression),
      optional($.fail_marker),
      'from',
      $._body_content,
    )),

    parameter_list: $ => seq(
      '(',
      optional(sep1($.parameter, ',')),
      ')',
    ),

    parameter: $ => seq(
      $.identifier,
      $.type_expression,
      optional(seq('where', choice($.shorthand_constraint, $.expression))),
    ),

    _body_content: $ => repeat1(choice(
      $._statement,
      $.match_arm,
    )),

    // ─── Annotations ───────────────────────────────────────────

    _annotation: $ => choice(
      $.ensures_clause,
      $.requires_clause,
      $.explain_annotation,
      $.terminates_annotation,
      $.trusted_annotation,
      $.why_not_annotation,
      $.chosen_annotation,
      $.near_miss_annotation,
      $.know_annotation,
      $.assume_annotation,
      $.believe_annotation,
      $.intent_annotation,
      $.satisfies_clause,
      $.when_annotation,
      $.event_type_annotation,
      $.state_init_annotation,
      $.state_type_annotation,
      $.with_constraint,
    ),

    domain_annotation: $ => seq(
      'domain', optional(':'),
      choice($.type_identifier, $.string_literal),
    ),

    temporal_annotation: $ => seq(
      'temporal', optional(':'),
      choice(
        $.string_literal,
        seq($.identifier, repeat(seq('->', $.identifier))),
      ),
    ),

    expression: $ => choice(
      $.pipe_expression,
      $.binary_expression,
      $.unary_expression,
      $.fail_propagation,
      $.async_marker,
      $.call_expression,
      $.index_expression,
      $.lookup_access_expression,
      $.field_expression,
      $.valid_expression,
      $.invalid_expression,
      $.lambda_expression,
      $.parenthesized_expression,
      $.list_literal,
      $._literal,
      $.identifier,
      $.type_identifier,
      $.constant_identifier,
    ),

    // Shorthand constraint: `> 0`, `!= ""`, `>= 1` (implicit self on left)
    binary_expression: $ => choice(
      prec.left(PREC.OR, seq($.expression, '||', $.expression)),
      prec.left(PREC.AND, seq($.expression, '&&', $.expression)),
      prec.left(PREC.COMPARE, seq($.expression, choice('==', '!=', '<', '>', '<=', '>='), $.expression)),
      prec.left(PREC.RANGE, seq($.expression, '..', $.expression)),
      prec.left(PREC.ADD, seq($.expression, choice('+', '-'), $.expression)),
      prec.left(PREC.MULT, seq($.expression, choice('*', '/', '%'), $.expression)),
    ),

    call_expression: $ => prec(PREC.CALL, seq(
      choice($.identifier, $.type_identifier, $.field_expression),
      '(',
      optional(sep1($.expression, ',')),
      ')',
    )),

    field_expression: $ => prec.left(PREC.FIELD, seq(
      $.expression,
      '.',
      $.identifier,
    )),

    _literal: $ => choice(
      $.string_literal,
      $.character_literal,
      $.integer_literal,
      $.decimal_literal,
      $.boolean_literal,
      $.regex_literal,
    ),

    string_literal: $ => choice(
      $._simple_string,
      $._triple_string,
      $.format_string,
      $.raw_string,
    ),

    // Plain string — no interpolation, { is literal
    _simple_string: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        token.immediate(prec(1, /[^"\\]+/)),
      )),
      '"',
    ),

    // f-string — explicit interpolation with {expr}
    raw_string: $ => seq(
      'r"',
      repeat(choice(
        $.regex_escape,
        $.regex_class,
        $.regex_quantifier,
        $.regex_group_open,
        $.regex_group_close,
        $.regex_anchor,
        $.regex_alternation,
        $.regex_dot,
        token.immediate(prec(-1, /[^"\\.|()\[\]{}+*?^$]+/)),
      )),
      '"',
    ),

    regex_class: $ => token.immediate(/\[\^?\]?([^\]\\]|\\.|\[:\w+:\])*\]/),

    regex_quantifier: $ => token.immediate(choice(
      /[+*?]/,
      /\{[0-9]+(?:,[0-9]*)?\}/,
    )),

    regex_anchor: $ => token.immediate(/[\^$]/),

    _triple_string: $ => seq(
      '"""',
      repeat(choice(
        /[^"]+/,
        /"[^"]/,
        /""[^"]/,
      )),
      '"""',
    ),

    integer_literal: $ => token(choice(
      /[0-9][0-9_]*/,
      /0x[0-9a-fA-F][0-9a-fA-F_]*/,
      /0b[01][01_]*/,
      /0o[0-7][0-7_]*/,
    )),

    decimal_literal: $ => token(/[0-9][0-9_]*\.[0-9][0-9_]*[fF]?/),

    identifier: $ => /[a-z_][a-z0-9_]*/,

    type_identifier: $ => /[A-Z][a-zA-Z0-9]*/,
