tree-sitter-prove/test/corpus/declarations.txt
===
Type definition - refinement
===

module Test
  type Port is Integer where 1..65535

---

(source_file
  (module_declaration
    (type_identifier)
    (type_definition
      (type_identifier)
      (refinement_type_body
        (type_expression (simple_type (type_identifier)))
        (expression
          (binary_expression
            (expression (integer_literal))
            (expression (integer_literal))))))))

===
Type definition - algebraic
===

module Test
  type Route is Get(path String) | Post(path String)

---

(source_file
  (module_declaration
    (type_identifier)
    (type_definition
      (type_identifier)
      (algebraic_type_body
        (algebraic_variant
          (type_identifier)
          (variant_fields (field_declaration (identifier) (type_expression (simple_type (type_identifier))))))
        (algebraic_variant
          (type_identifier)
          (variant_fields (field_declaration (identifier) (type_expression (simple_type (type_identifier))))))))))

===
Validates function
===

validates email(address String)
    from
        contains(address, "@")

---

(source_file
  (function_definition
    (verb)
    (identifier)
    (parameter_list
      (parameter (identifier) (type_expression (simple_type (type_identifier)))))
    (expression
      (call_expression
        (identifier)
        (expression (identifier))
        (expression (string_literal))))))

===
Inputs function with return type
===

inputs users(db Database) List<User>
    from
        query(db, "SELECT * FROM users")

---

(source_file
  (function_definition
    (verb)
    (identifier)
    (parameter_list
      (parameter (identifier) (type_expression (simple_type (type_identifier)))))
    (type_expression
      (generic_type (type_identifier) (type_expression (simple_type (type_identifier)))))
    (expression
      (call_expression
        (identifier)
        (expression (identifier))
        (expression (string_literal))))))

===
Main definition
===

main() Result
    from
        listen(server, 8080)

---

(source_file
  (main_definition
    (type_expression (simple_type (type_identifier)))
    (expression
      (call_expression
        (identifier)
        (expression (identifier))
        (expression (integer_literal))))))

===
Pure verb - reads
===

reads config(path String) String
    from
        load(path)

---

(source_file
  (function_definition
    (verb)
    (identifier)
    (parameter_list
      (parameter (identifier) (type_expression (simple_type (type_identifier)))))
    (type_expression (simple_type (type_identifier)))
    (expression
      (call_expression
        (identifier)
        (expression (identifier))))))

===
Pure verb - creates
===

creates user(name String) User
    from
        User(name)

---

(source_file
  (function_definition
    (verb)
    (identifier)
    (parameter_list
      (parameter (identifier) (type_expression (simple_type (type_identifier)))))
    (type_expression (simple_type (type_identifier)))
    (expression
      (call_expression
        (type_identifier)
        (expression (identifier))))))

===
Binary type definition
===

module Test
  type Handle is binary

---

(source_file
  (module_declaration
    (type_identifier)
    (type_definition
      (type_identifier)
      (binary_type_body))))

===
Namespaced function call
===

transforms greet(name String) String
    from
        Strings.concat("Hello, ", name)

---

(source_file
  (function_definition
    (verb)
    (identifier)
    (parameter_list
      (parameter (identifier) (type_expression (simple_type (type_identifier)))))
    (type_expression (simple_type (type_identifier)))
    (expression
      (call_expression
        (field_expression
          (expression (type_identifier))
          (identifier))
        (expression (string_literal))
        (expression (identifier))))))

===
Import with types keyword
===

module Foo
  Http types Response, types Server, inputs listen

---

(source_file
  (module_declaration
    (type_identifier)
    (import_declaration
      (type_identifier)
      (import_group
        (type_identifier))
      (import_group
        (type_identifier))
      (import_group
        (verb)
        (identifier)))))

===
Lookup type with multiple variants
===

module Test
  type Color:[Lookup] is String where
    Red | "red"
    Green | "green"
    Blue | "blue"
    YesNo | "yes"
          | "no"

---

(source_file
  (module_declaration
    (type_identifier)
    (type_definition
      (type_identifier)
      (type_modifier_bracket
        (type_identifier))
      (lookup_type_body
        (type_expression (simple_type (type_identifier)))
        (lookup_variant
          (type_identifier)
          (string_literal))
        (lookup_variant
          (type_identifier)
          (string_literal))
        (lookup_variant
          (type_identifier)
          (string_literal))
        (lookup_variant
          (type_identifier)
          (string_literal)
          (string_literal))))))

===
Domain annotation
===

module Test
  domain Finance

---

(source_file
  (module_declaration
    (type_identifier)
    (domain_annotation
      (type_identifier))))

===
Temporal annotation
===

module Test
  temporal authenticate -> authorize -> access

---

(source_file
  (module_declaration
    (type_identifier)
    (temporal_annotation
      (identifier)
      (identifier)
      (identifier))))

===
Float literal with f suffix
===

transforms half(x Float) Float
    from
        x * 0.5f

---

(source_file
  (function_definition
    (verb)
    (identifier)
    (parameter_list
      (parameter (identifier) (type_expression (simple_type (type_identifier)))))
    (type_expression (simple_type (type_identifier)))
    (expression
      (binary_expression
        (expression (identifier))
        (expression (decimal_literal))))))

===
Raw string with regex internals
===

validates code(input String)
    from
        Pattern.test(input, r"^[A-Z]{2,4}-[0-9]{4,8}$")

---

(source_file
  (function_definition
    (verb)
    (identifier)
    (parameter_list
      (parameter (identifier) (type_expression (simple_type (type_identifier)))))
    (expression
      (call_expression
        (field_expression
          (expression (type_identifier))
          (identifier))
        (expression (identifier))
        (expression (string_literal
          (raw_string
            (regex_anchor)
            (regex_class)
            (regex_quantifier)
            (regex_class)
            (regex_quantifier)
            (regex_anchor))))))))

===
Multi-column lookup with where
===

module Test
  type TokenKind:[Lookup] is String | Integer where
    One | "one" | 1
    Two | "two" | 2

---

(source_file
  (module_declaration
    (type_identifier)
    (type_definition
      (type_identifier)
      (type_modifier_bracket
        (type_identifier))
      (lookup_type_body
        (type_expression (simple_type (type_identifier)))
        (type_expression (simple_type (type_identifier)))
        (lookup_variant
          (type_identifier)
          (string_literal)
          (integer_literal))
        (lookup_variant
          (type_identifier)
          (string_literal)
          (integer_literal))))))

===
Lookup with named columns
===

module Test
  type Prediction:[Lookup] is probability:Float | String | confidence:Float where
    Cat | 0.9 | "cat" | 0.95
    Dog | 0.8 | "dog" | 0.85

---

(source_file
  (module_declaration
    (type_identifier)
    (type_definition
      (type_identifier)
      (type_modifier_bracket
        (type_identifier))
      (named_lookup_type_body
        (named_lookup_column (identifier) (type_expression (simple_type (type_identifier))))
        (type_expression (simple_type (type_identifier)))
        (named_lookup_column (identifier) (type_expression (simple_type (type_identifier))))
        (lookup_variant
          (type_identifier)
          (decimal_literal)
          (string_literal)
          (decimal_literal))
        (lookup_variant
          (type_identifier)
          (decimal_literal)
          (string_literal)
          (decimal_literal))))))

===
Dispatch lookup with named columns
===

module Test
  type CliMap:[Lookup] is name:String | handler:String
    "build" | build
    "check" | check

---

(source_file
  (module_declaration
    (type_identifier)
    (type_definition
      (type_identifier)
      (type_modifier_bracket
        (type_identifier))
      (dispatch_lookup_type_body
        (named_lookup_column (identifier) (type_expression (simple_type (type_identifier))))
        (named_lookup_column (identifier) (type_expression (simple_type (type_identifier))))
        (dispatch_lookup_variant
          (string_literal)
          (identifier))
        (dispatch_lookup_variant
          (string_literal)
          (identifier))))))
